crates/alder-can/src/snapshots/alder_can__module__tests__multiple_duplicate_types_all_reported.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Foo = Int\n\ntype alias Foo = String\n\ntype alias Bar = Int\n\ntype alias Bar = String\n"
---
[
    DuplicateType {
        name: "Bar",
        first: Region {
            start: Position {
                line: 7,
                column: 12,
            },
            end: Position {
                line: 7,
                column: 15,
            },
        },
        second: Region {
            start: Position {
                line: 9,
                column: 12,
            },
            end: Position {
                line: 9,
                column: 15,
            },
        },
    },
    DuplicateType {
        name: "Foo",
        first: Region {
            start: Position {
                line: 3,
                column: 12,
            },
            end: Position {
                line: 3,
                column: 15,
            },
        },
        second: Region {
            start: Position {
                line: 5,
                column: 12,
            },
            end: Position {
                line: 5,
                column: 15,
            },
        },
    },
]
