crates/alder-can/src/snapshots/alder_can__module__tests__not_found_binop.snap
---
source: crates/alder-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nx = (+)\n"
---
[
    NotFoundBinop {
        region: Region {
            start: Position {
                line: 3,
                column: 5,
            },
            end: Position {
                line: 3,
                column: 8,
            },
        },
        name: "+",
        available: [],
    },
]
